Fix modal being covered by banner advertisement

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -71,7 +71,7 @@ $text-color: #fff;
   }
 }
 // Make Modal only cover part of the screen
-.modal-backdrop { top: 50%; }
+.modal-backdrop { top: 45%; }
 // Hide ugly backdrop
 .modal-backdrop.active { background-color: rgba(0, 0, 0, 0); }
 .banner-content {
